2 taskin duzelisi add knopkasini tableye cixardim

--- a/Pustok/Areas/Admin/Views/Category/Index.cshtml
+++ b/Pustok/Areas/Admin/Views/Category/Index.cshtml
@@ -15,6 +15,7 @@
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+                            <a href="#" class="btn btn-sm btn-success">Add category</a>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -43,7 +44,6 @@
                                                 <td>@category.Name</td>
                                                 <td>@category.Description</td>
                                                 <td class ="d-flex justify-content-around">
-                                                    <a href="#" class="btn btn-sm btn-success">Edit</a>
                                                     <a href="#" class="btn btn-sm btn-danger">Delete</a>
                                                     <a href="#" class="btn btn-sm btn-warning">Update</a>
                                                     <a href="#" class="btn btn-sm btn-info">Details</a>
