--- a/Pustok/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Pustok/Areas/Admin/Views/Product/Edit.cshtml
@@ -34,7 +34,14 @@
                         <input asp-for="Price" type="number" step="0.01" class="form-control">
                         <span asp-validation-for="Price" class="text-danger"></span>
                     </div>
-                    
+                    <div class="form-group">
+                        <label asp-for="CategoryId">Category</label>
+                        <select asp-for="CategoryId" class="form-control" 
+                                asp-items="@(new SelectList(ViewBag.Categories, "Id", "Name"))">
+                            <option value="">-- Select Category --</option>
+                        </select>
+                        <span asp-validation-for="CategoryId" class="text-danger"></span>
+                    </div>
                     <button type="submit" class="btn btn-primary me-2">Save Changes</button>
                     <a asp-action="Index" class="btn btn-light">Cancel</a>
                 </form>
